syntax = "proto3";

import "google/protobuf/empty.proto";

import "socialNet_backend_protobuf/common.proto";
import "socialNet_backend_protobuf/foo.proto";

package socialNet_backend;

service socialnetService {
  rpc Ping(google.protobuf.Empty) returns (SimpleResponse);
  rpc GetFoo(IdRequest) returns (Foo);
}
